# zaap

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
app/: auth.py  config.py  db.py  main.py  rate_limit.py  schemas.py
docs/: architecture.md  backlog.md  conventions.md  decisions.md  entrypoints.md  flows.md
tests/: __init__.py  test_api.py  test_auth.py
