[build-system]
requires = "setuptools>=61.0"
build-backend = "setuptools.build_meta"

[project]
name = "zaap"
description = "FastAPI-based auth backend for Starloco Zaap service"
readme = "README.md"
requires-python = ">=3.10"
license.text = "MIT"
authors = [
    {name = "Tiboitel"}
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "PyMySQL>=1.1.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
zaap = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]